test/tests/stages/18_structures/invalid_struct_tags/file_scope_var_type_undeclared.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: var
        None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        None: 
